tests/error/file_scope_final_no_overload.gw
#! [contains] can't overload final function
fun final void test() {}
fun final void test(int i) {}
